deleted unecessary files

--- a/end-to-end-studentsPerformance-RA.ipynb
+++ b/end-to-end-studentsPerformance-RA.ipynb
@@ -2,7 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# End-to-end Machine Learning project\n",
     "\n",
@@ -11,12 +13,14 @@
     "**Original Dataset Source: Cortez,Paulo. (2014). Student Performance. UCI Machine Learning Repository. https://doi.org/10.24432/C5TG7T.**\n",
     "\n",
     "\n",
-    "**Modified Dataset: Student Performance https://raw.githubusercontent.com/rubaomari/data/main/student/student-mat-modified-RA.csv**"
+    "**Modified Dataset: Student Performance https://raw.githubusercontent.com/rubaomari/data/main/student/student-mat-modified-RA.csv**\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Student Performance Dataset Description\n",
     "\n",
@@ -131,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +554,7 @@
        "[404 rows x 33 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
