--- a/Final Project/FinalProject_Flight Price Prediction.ipynb
+++ b/Final Project/FinalProject_Flight Price Prediction.ipynb
@@ -1142,9 +1142,13 @@
     }
    ],
    "source": [
+    "# Importing the Linear Regression model from sklearn's linear_model module\n",
     "from sklearn.linear_model import LinearRegression\n",
     "\n",
+    "# Creating an instance of the LinearRegression model\n",
     "lr_model = LinearRegression()\n",
+    "\n",
+    "# Fitting the model with the training data (X_train and y_train)\n",
     "lr_model.fit(X_train,y_train)"
    ]
   },
@@ -1267,28 +1271,6 @@
     "\n",
     "# Fit the MLPRegressor model to the training data (X_train, y_train)\n",
     "MLPR_model.fit(X_train, y_train)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "24639f8d-a547-49f9-a4e4-b1edfdb87bb8",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2000"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Access the number of iterations performed during training for the MLP Regressor model\n",
-    "MLPR_model.n_iter_"
    ]
   },
   {
@@ -1544,7 +1526,7 @@
     "stops_select = widgets.Dropdown(options=['zero', 'one', 'two_or_more'],description = '# of Stops: ', value = 'zero')\n",
     "destination_city_select = widgets.Dropdown(options=['Delhi', 'Mumbai', 'Bangalore', 'Hyderabad', 'Chennai','Kolkata'],description = 'Destination: ', value = 'Delhi')\n",
     "class_select = widgets.Dropdown(options=['Economy', 'Business'],description = 'Select Class: ', value = 'Economy')\n",
-    "duration_slider = widgets.FloatSlider(min=0.83, max=50.0, step=0.1, value=7.42, description='Duration')\n",
+    "duration_slider = widgets.FloatSlider(min=0.83, max=50.0, step=0.01, value=7.42, description='Duration')\n",
     "days_left_slider = widgets.IntSlider(min=1, max=50, step=1, value=15, description='Days Left')\n",
     "\n",
     "\n",
